--- a/flex.html
+++ b/flex.html
@@ -10,10 +10,14 @@
 <body>
     <div id="container" class="container">
         <div class="block">
-            <div></div>
+            <div>
+                <span>DIV</span>
+            </div>
         </div>
         <div class="flex">
-            <div></div>
+            <div>
+                <span>DIV</span>
+            </div>
         </div>
     </div>
 </body>
